--- a/backend/backend-pfa/src/main/resources/application.properties
+++ b/backend/backend-pfa/src/main/resources/application.properties
@@ -1,1 +1,41 @@
 spring.application.name=backend-pfa
+# ===============================
+# SERVER CONFIG
+# ===============================
+server.port=8083
+server.servlet.context-path=/api
+
+# ===============================
+# DATABASE CONFIG (PostgreSQL)
+# ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5432/pfa_db
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# JPA / HIBERNATE CONFIG
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# SECURITY CONFIG
+# ===============================
+spring.security.user.name=admin
+spring.security.user.password=admin123
+
+# ===============================
+# LOGGING
+# ===============================
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# ===============================
+# DEVTOOLS
+# ===============================
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
